# shepard

./: .editorconfig  .env.development  .env.production  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  .prettierrc.json  .project  .pylintrc  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  LICENSE  Makefile  README.md  RESUME.md  api_v2.md  architecture_repository.md  codemeta.json  cspell.json  docToolchainConfig.groovy  docker-compose.yml  documentation.md  dtcw.bat  env.d.ts  env.example  impressions_claude.md  main.py  neo4j-docker-entrypoint.sh  package-lock.json  package.json  pom.xml  pyproject.toml  (+9 more)
.git-hooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  dependency-review-config.yml  labels.yml  pull_request_template.md  release.yml
aidocs/: 00-doc-stages.md  00-index.md  01-doc-stage-index.json  01-doc-stage-index.md  03-issues-status.md  04-reconciliation.md  07-security-issues.md  08-first-issues.md  10-cleanup-plan.md  100-ui-annoyances.md  11-implementation-plan.md  12-timescaledb-performance-analysis.md  13-search-improvements.md  14-semantic-improvements.md  15-phase-0-status.md  16-dispatcher-backlog.md  17-startup-wait-audit.md  19-architecture-feedback.md  20-epic-roadmap.md  21-user-interest-gauge.md  22-admin-cli-draft.md  23-api-critique.md  25-neo4j-id-migration-design.md  26-crud-consistency.md  27-convenience-clients-design.md  28-paradigms-and-clients-synthesis.md  29-p10-implementation-design.md  30-provenance-and-lineage-design.md  31-rocrate-export-optimisation.md  (+65 more)
clients-v2/python-kiota/: README.md  pyproject.toml
clients/python/shepard/: README.md  pyproject.toml
clients/python/shepard/src/shepard/: __init__.py  _proxies.py  client.py  errors.py  pagination.py
clients/python/shepard/tests/: conftest.py  test_client.py  test_errors.py  test_pagination.py
e2e/api/: .env.integration.example  conftest.py  pyproject.toml
e2e/api/helpers/: auth.py
e2e/api/tests/: test_annotations.py  test_auth.py  test_collections.py  test_data_objects.py  test_error_shapes.py  test_file_containers.py  test_timeseries.py  test_v2_features.py
plugins/krl-interpreter/: .gitignore  Dockerfile  README.md  compose-profile.yml  pom.xml  pyproject.toml
plugins/krl-interpreter/docs/: install.md  quickstart.md  reference.md
plugins/krl-interpreter/krl_interpreter/: __init__.py  errors.py
plugins/krl-interpreter/krl_interpreter/ik/: __init__.py  seed_strategy.py  solver.py  types.py  urdf_loader.py
plugins/krl-interpreter/krl_interpreter/parser/: __init__.py  ir.py  walker.py
plugins/krl-interpreter/krl_interpreter/parser/grammar/: KrlLexer.g4  KrlParser.g4  SOURCES.md  __init__.py
plugins/krl-interpreter/krl_interpreter/sidecar/: __init__.py  __main__.py  app.py  composer.py  config.py  schemas.py
plugins/krl-interpreter/src/main/java/de/dlr/shepard/plugins/krl/: KrlInterpreterPluginManifest.java
plugins/krl-interpreter/src/main/java/de/dlr/shepard/v2/mcp/: KrlMcpTools.java
plugins/krl-interpreter/src/main/java/de/dlr/shepard/v2/transform/krl/config/: KrlInterpreterConfig.java
plugins/krl-interpreter/src/main/java/de/dlr/shepard/v2/transform/krl/services/: KrlSidecarClient.java  KrlTrajectoryParams.java  KrlTrajectoryService.java
plugins/krl-interpreter/src/test/java/de/dlr/shepard/plugins/krl/: KrlInterpreterPluginManifestTest.java
plugins/krl-interpreter/src/test/java/de/dlr/shepard/v2/mcp/: KrlMcpToolsTest.java
plugins/krl-interpreter/src/test/java/de/dlr/shepard/v2/transform/krl/: KrlTrajectoryTransformExecutorTest.java
plugins/krl-interpreter/src/test/java/de/dlr/shepard/v2/transform/krl/services/: KrlTrajectoryServiceCdiContractTest.java
plugins/krl-interpreter/tests/: conftest.py  test_ik_benchmark.py  test_ik_seed_strategy.py  test_ik_solver.py  test_ik_urdf_loader.py  test_parser_dat_file.py  test_parser_flow.py  test_parser_frames.py  test_parser_motion.py  test_parser_real_fixture.py  test_sidecar_app.py  test_sidecar_composer.py  test_sidecar_schemas.py
plugins/krl-interpreter/tests/fixtures/: frame_switching.src  hello_world.src  layup_loop.src  ply5_layup.src
plugins/krl-interpreter/tests/ik_fixtures/: kr210l150.urdf  two_link_arm.urdf
plugins/shepard-plugin-mcp/: Dockerfile  pyproject.toml
plugins/shepard-plugin-mcp/docs/: install.md  quickstart.md  reference.md
plugins/shepard-plugin-mcp/src/shepard_mcp/: __init__.py  client.py  plugin_state.py  server.py
plugins/shepard-plugin-mcp/src/shepard_mcp/tools/: collections.py  timeseries.py
plugins/shepard-plugin-mcp/tests/: test_e2e.py  test_unit.py
scripts/: .env.example  .gitignore  .gitlab-ci.yml  README.md  audit-single-file-bundles.py  audit-singleton-file-bundles.cypher  backfill-single-file-bundles-to-singletons.py  bib2yml.py  bootstrap-gh-project.py  build-traceability-index.py  check-schema-name.sh  docs-currency-audit.py  gh-pm-backfill-execute.py  install-hooks.sh  install-plugins.sh  lint-label-stages.sh  lint-ttl-namespaces.sh  mffd-import-stats-collector.py  mffd-ingest-kickoff.sh  mffd-process-chain-mapping.example.yaml  pyproject.toml  regenerate-doc-stage-index.py  renovate.json  setup-worktree.sh  tag-aidocs-stages.py  test-trace-feature.sh  trace-all-shipped.py  trace-feature.sh  upgrade-from-v5.sh  validate-mffd-process-chain-mapping.py
scripts/files/: earth.json  earth.url  germany_yearly_temperatures.csv  mars.url  mercury.url  venus.url
scripts/perf/: README.md  k6-endpoints.js  k6-smoke.js  k6-soak.js  k6-stress.js  recommend.py
scripts/shepard_scripts/: main.py
scripts/shepard_scripts/scripts/: change_version.py  example_data.py  patch_openapi_for_python.py  releases.py  slice_openapi_v1.py
scripts/templates/: release_notes.md
scripts/tests/: test_validate_mffd_process_chain_mapping.py
timescale-migration-preparation/: .gitignore  Dockerfile  README.md  check.py  check_connections.py  config.py  docker-compose.yml  find_invalid_influx_series.py  fix.py  fix_neo4j_consistency.py  pyproject.toml  rename_invalid_influx_tags.py
(+9350 files in other folders)
