[tool.poetry]
name = "shepard-releases"
version = "0.1.0"
description = ""
authors = ["Tobias Haase <tobias.haase@dlr.de>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.10.1"
python-gitlab = "4.3.0"
ruff = "^0.1.4"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-builtins
    "A",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
