[tool.poetry]
name = "shepard_scripts"
version = "0.1.0"
description = ""
authors = ["Tobias Haase <tobias.haase@dlr.de>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-gitlab = "5.6.0"
ruff = "0.11.6"
jinja2 = "^3.1.2"
click = "^8.1.7"
shepard-client = {version = "5.1.0", source = "shepard-gitlab"}
ruamel-yaml = "^0.18.15"
pandas = "^2.3.3"
dotenv = "^0.9.9"
numpy = "^2.3.5"

[tool.poetry.scripts]
cli = "shepard_scripts.main:cli"

[[tool.poetry.source]]
name = "shepard-gitlab"
url = "https://gitlab.com/api/v4/projects/59082852/packages/pypi/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
# ignore S101 - checks for assert keyword - checks for assert keyword
lint.ignore=["S101"]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-builtins
    "A",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# (Almost) (Almost) same as Black.
line-length = 100
indent-width = 4
