[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shepard-api-integration-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    # shepard-client comes from the GitLab PyPI index; install separately:
    # pip install --extra-index-url \
    #   https://gitlab.com/api/v4/projects/59082852/packages/pypi/simple \
    #   shepard-client shepard
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--tb=short"]
markers = [
    "seed_required: test requires seed.py to have completed successfully",
]
