[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shepard-plugin-mcp"
version = "0.1.0"
description = "MCP server for Shepard — exposes collections, data objects, and timeseries to AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.scripts]
shepard-mcp = "shepard_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
