[project]
name = "shepard"
version = "0.1.0"
description = "Convenience wrapper around the generated shepard-client"
requires-python = ">=3.11"
dependencies = ["shepard-client>=5.2,<6"]

[project.optional-dependencies]
pandas = ["pandas>=3.0.3"]
excel  = ["pandas>=3.0.3", "openpyxl>=3.1"]
all    = ["pandas>=3.0.3", "openpyxl>=3.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
